tests/golden/with_squid_proxy/icap-virusscan/icap-virusscan/50_squid-configmap.yaml
apiVersion: v1
data:
  ICAP_SERVICE_CONFIG: |
    icap_service service_avi_1 reqmod_precache icap://icap.syn-icap-virusscan.svc.cluster.local:80/squidclamav bypass=on on-overload=bypass
    adaptation_service_set avi service_avi_1
    adaptation_access avi allow all
kind: ConfigMap
metadata:
  labels:
    app: squid
  name: squid-configmap
  namespace: syn-icap-virusscan
