tests/golden/with_squid_proxy/icap-virusscan/icap-virusscan/52_squid-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: squid
  name: squid
  namespace: syn-icap-virusscan
spec:
  ports:
    - name: squid
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: squid
  type: ClusterIP
